--- a/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/index.html
+++ b/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>HTML & CSS Sections</title>
 </head>
 <body>
@@ -20,6 +21,22 @@
         <em>Emphasis/"italics" tag</em>
         <strong>Strong/"bold" tag</strong>
         <u>Underline tag</u>
+    </div>
+
+    <div>
+        <a href="https://google.com" target="_blank">Link to Google.</a>
+        <hr>
+        <img src="./images/kalobs_image.jpg" alt="" width="500" height="250">
+        <hr>
+
+        <ol>
+            <li>Ordered</li>
+            <li>List</li>
+        </ol>
+        <ul>
+            <li>Unordered</li>
+            <li>List</li>
+        </ul>
     </div>
 
 </body>
