--- a/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/index.html
+++ b/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/index.html
@@ -29,12 +29,12 @@
         <img src="./images/kalobs_image.jpg" alt="" width="500" height="250">
         <hr>
 
-        <ol>
+        <ol class="list">
             <li>Ordered</li>
             <li>List</li>
         </ol>
-        <ul>
-            <li>Unordered</li>
+        <ul class="list">
+            <li id="list_item_four">Unordered</li>
             <li>List</li>
         </ul>
     </div>
