--- a/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/index.html
+++ b/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/index.html
@@ -26,7 +26,7 @@
     <div>
         <a href="https://google.com" target="_blank">Link to Google.</a>
         <hr>
-        <img src="./images/kalobs_image.jpg" alt="" width="500" height="250">
+        <img src="./images/kalobs_image.jpg" alt="Laptop on a table overlooking a city skyline">
         <hr>
 
         <ol class="list">
